--- a/src/app/views/shared/sidebar/settings-widget/settings-widget.component.scss
+++ b/src/app/views/shared/sidebar/settings-widget/settings-widget.component.scss
@@ -1,1 +1,11 @@
-// in sidebar.scss
+.settings-widget {
+  width: 100%;
+  min-width: 500px;
+  height: 100vh;
+  border-right: 1px solid #000;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
