--- a/src/app/views/pages/tests/tests.component.html
+++ b/src/app/views/pages/tests/tests.component.html
@@ -1,8 +1,6 @@
 <div class="container">
   <div class="statusbar w-full flex justify-center">
-
-
-    <div 
+    <div
       class="status-circle"
       *ngFor="let status of questions"
       [class.active]="status.isActive"
@@ -12,20 +10,16 @@
   <div
     class="content bg-color-4-l dark:bg-color-4 flex flex-col justify-center items-center"
   >
+  {{config.testSize}}
     <h2 class="p-4">{{tests[currentQuestion].title}}</h2>
 
     <div class="image-container bg-color-2-l dark:bg-color-2">
       <div class="loader"></div>
-      <img
-        class="w-full pb-4"
-        src="{{tests[currentQuestion].image}}"
-        alt=""
-      />
+      <img class="w-full pb-4" src="{{tests[currentQuestion].image}}" alt="" />
     </div>
 
     <button
       *ngFor="let answer of tests[currentQuestion].answers"
-
       (click)="nextQuestion(answer.isCorrect)"
     >
       {{answer.title}}
