adding tests from UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   [class.dark]="isDarkTheme"
 >
   <div
-    class="w-[100vw] h-[100vh] flex items-center justify-center bg-color-1-l dark:bg-color-2"
+    class="fill-white text-white w-[100vw] h-[100vh] flex items-center justify-center bg-color-1-l dark:bg-color-2"
   >
     <app-sidebar />
 
