--- a/src/app/views/shared/sidebar/settings-widget/settings-widget.component.html
+++ b/src/app/views/shared/sidebar/settings-widget/settings-widget.component.html
@@ -64,6 +64,7 @@
           <input
             id="rl3"
             type="radio"
+            value="3"
             [checked]="config.difficulty === 3"
           />
           <label for="rl3">Sinior</label>
