delete questions and edit (not work)

--- a/src/app/views/shared/sidebar/sidebar.component.html
+++ b/src/app/views/shared/sidebar/sidebar.component.html
@@ -27,6 +27,12 @@
           <img class="inverted" src="assets/img/sidebar/plus.svg" alt="test" />
         </button>
       </li>
+
+      <li data-tooltip="shadow all test">
+        <button  routerLink="/all-tests" [routerLinkActive]="['active']">
+          <img class="inverted" src="assets/img/sidebar/plus.svg" alt="test" />
+        </button>
+      </li>
     </ul>
 
     <ul class="settings">
